force-app/main/default/objects/Kiva_Transaction__c/Kiva_Transaction__c.object-meta.xml
<CustomObject>
    <label>Kiva Transaction</label>
    <nameField>
        <displayFormat>KLT-{00000000}</displayFormat>
        <label>Kiva Transactions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kiva Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>