force-app/main/default/objects/Kiva_Transaction__c/fields/Admin_fee_for_Payment__c.field-meta.xml
<CustomField>
    <fullName>Admin_fee_for_Payment__c</fullName>
    <inlineHelpText>INTEREST</inlineHelpText>
    <label>Admin fee for Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>