force-app/main/default/objects/Kiva_Transaction__c/fields/Date_due__c.field-meta.xml
<CustomField>
    <fullName>Date_due__c</fullName>
    <label>Date due</label>
    <type>Date</type>
</CustomField>