force-app/main/default/objects/Kiva_Transaction__c/fields/Due_Date_API__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_API__c</fullName>
    <formula>TEXT( Date_due__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date (API)</label>
    <type>Text</type>
</CustomField>