force-app/main/default/objects/Kiva_Transaction__c/fields/Due_Date_Reached__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Reached__c</fullName>
    <formula>AND(  RecordType.DeveloperName =&quot;Kiva_Invoice&quot; ,Date_due__c &lt; Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Reached</label>
    <type>Checkbox</type>
</CustomField>