force-app/main/default/objects/Kiva_Transaction__c/fields/Kiva_Payment_due__c.field-meta.xml
<CustomField>
    <fullName>Kiva_Payment_due__c</fullName>
    <inlineHelpText>PRINCIPAL</inlineHelpText>
    <label>Kiva Payment due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>