force-app/main/default/objects/Kiva_Transaction__c/fields/Loan_Portfolio_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Portfolio_Amount__c</fullName>
    <formula>IF( Payment_Order__c = 1 &amp;&amp;  RecordTypeId = &quot;0123c000000V9b9AAC&quot;,
     Kiva_Loan__r.Total_Loan_Amount__c, 
     0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Portfolio Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>