force-app/main/default/objects/Kiva_Transaction__c/fields/of_days_past_Due__c.field-meta.xml
<CustomField>
    <fullName>of_days_past_Due__c</fullName>
    <formula>TODAY() - Date_due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of days past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>