force-app/main/default/objects/Kiva_Transaction__c/fields/of_Days_until_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>of_Days_until_Invoice_Date__c</fullName>
    <formula>Date_due__c  - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Days until Invoice Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>