force-app/main/default/objects/Kiva_Transaction__c/fields/Payment_Order__c.field-meta.xml
<CustomField>
    <fullName>Payment_Order__c</fullName>
    <label>Payment Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>