force-app/main/default/objects/Kiva_Transaction__c/fields/Payment_Receipt_photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Payment_Receipt_photo_URL__c</fullName>
    <label>Payment Receipt photo URL</label>
    <type>Url</type>
</CustomField>