force-app/main/default/objects/Kiva_Transaction__c/fields/Payment_received__c.field-meta.xml
<CustomField>
    <fullName>Payment_received__c</fullName>
    <label>Payment received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>