force-app/main/default/objects/Kiva_Transaction__c/fields/Payment_received_date__c.field-meta.xml
<CustomField>
    <fullName>Payment_received_date__c</fullName>
    <label>Payment Received date</label>
    <type>Date</type>
</CustomField>