force-app/main/default/objects/Kiva_Transaction__c/fields/theme_type_id__c.field-meta.xml
<CustomField>
    <fullName>theme_type_id__c</fullName>
    <formula>Kiva_Loan__r.Theme_ID__c</formula>
    <label>Theme Type ID</label>
    <type>Text</type>
</CustomField>