force-app/main/default/objects/Kiva_Transaction__c/fields/Total_of_scheduled_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_of_scheduled_Payments__c</fullName>
    <label>Total # of scheduled Payments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>