force-app/main/default/objects/Kiva_Transaction__c/fields/Total_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment__c</fullName>
    <formula>Kiva_Payment_due__c  + Admin_fee_for_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>