force-app/main/default/objects/Kiva_Transaction__c/recordTypes/Kiva_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Kiva_Invoice</fullName>
    <active>true</active>
    <label>Kiva Invoice</label>
</RecordType>