force-app/main/default/objects/Kiva_Transaction__c/recordTypes/Kiva_Payment_In.recordType-meta.xml
<RecordType>
    <fullName>Kiva_Payment_In</fullName>
    <active>true</active>
    <label>Kiva Payment In</label>
</RecordType>