force-app/main/default/objects/Kiva_Transaction__c/recordTypes/Kiva_Payment_Out.recordType-meta.xml
<RecordType>
    <fullName>Kiva_Payment_Out</fullName>
    <active>true</active>
    <label>Kiva Payment Out</label>
</RecordType>